alterações nas fontes/textos e adição de formulário de inscrição

--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,24 @@
             <h1>Seja bem-vindo ao <p class="backGroundPersonalizado">mehX.Tech</p></h1>
             <p>Um site de notícias sobre tecnologia e inovação</p>
         </section>
+        <section class="content">
+            <p>Uma página para você que é amante da tecnologia!</p>
+            <p>Se você gosta de estar sempre atualizado sobre as novidades do mundo da tecnologia, você está no lugar certo!</p>
+            <p>Aqui você encontra notícias sobre os mais diversos assuntos relacionados a tecnologia e inovação.</p>
+            <p>Além disso, você pode se cadastrar e ter acesso a conteúdos exclusivos!</p>
+
+        </section>
     </main>
+
+    <form action="" class="cadastro-form">
+        <div class="form-container">
+            <h2>Cadastro</h2>
+            <label for="email">Email:</label>
+            <input type="email" name="email" id="email" placeholder="Digite seu email">
+            <label for="nome">Nome</label>
+            <input type="text" name="nome" id="nome" placeholder="Digite seu nome">
+            <button type="submit">Enviar</button>
+        </div>
+    </form>
 </body>
 </html>
