--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>mehX.Tech</title>
+    <title>nanoSet</title>
     <link rel="stylesheet" href="./style/style.css">
 </head>
 <body>
@@ -29,7 +29,7 @@
 
     <main>
         <section class="intro">
-            <h1>Seja bem-vindo ao <p class="backGroundPersonalizado">mehX.Tech</p></h1>
+            <h1>Seja bem-vindo ao <p class="backGroundPersonalizado">nanoSet</p></h1>
             <p>Um site de notícias sobre tecnologia e inovação</p>
         </section>
         <section class="content">
