--- a/public/index.html
+++ b/public/index.html
@@ -57,8 +57,8 @@
         <div class="social-medias">
             <p>Acompanhe a gente também no instagram!</p>
             <div class="images">
-                <img src="./assets/instagram_4138124.png" alt="instagram logo">
-                <img src="./assets/github_5968896.png" alt="git hub logo">
+                <img src="./assets/instagram_4138124.png" alt="instagram logo" href="https://www.instagram.com/nanoset25">
+                <img src="./assets/github_5968896.png" alt="git hub logo" href="https://github.com/AndrezeraDev">
             </div>
         </div>
     </footer>
