--- a/public/chat.html
+++ b/public/chat.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>nanoSet</title>
-    <link rel="stylesheet" href="./style/style.css">
+    <link rel="stylesheet" href="./style/chat.css">
 </head>
 <body>
     <header>
@@ -30,30 +30,19 @@
     <main>
         <section class="intro">
             <h1>Seja bem-vindo ao <p class="backGroundPersonalizado">nanoSet</p></h1>
-            <p>Um site de notícias sobre tecnologia e inovação</p>
+            <p>Teste seus prompts com IA treinada para isso!</p>
         </section>
-        <section class="content">
-            <p>Uma página para você que é amante da tecnologia!</p>
-            <p>Se você gosta de estar sempre atualizado sobre as novidades do mundo da tecnologia, você está no lugar certo!</p>
-            <p>Aqui você encontra notícias sobre os mais diversos assuntos relacionados a tecnologia e inovação.</p>
-            <p>Além disso, você pode se cadastrar e ter acesso a conteúdos exclusivos!</p>
-
-        </section>
-    </main>
-
-    <form action="" class="cadastro-form">
-        <div class="form-container">
-            <h2>Cadastro</h2>
-            <label for="email">Email:</label>
-            <input type="email" name="email" id="email" placeholder="Digite seu email">
-            <label for="nome">Nome</label>
-            <input type="text" name="nome" id="nome" placeholder="Digite seu nome">
-            <div class="button-container">
-                <button type="submit">Cadastrar</button>
+        
+        <section class="chat-container">
+            <div class="chat-box" id="chat-box">
+                <!-- As mensagens enviadas serão exibidas aqui -->
             </div>
-            
-        </div>
-    </form>
+            <div class="input-container">
+                <textarea id="chat-input" placeholder="Digite sua mensagem..."></textarea>
+                <button id="send-button">Enviar</button>
+            </div>
+        </section>
+
 
     <footer>
         <p>&copy; 2025 - mehX.Tech | AndrezeraDev</p>
@@ -70,5 +59,6 @@
         </div>
     </footer>
     <script src="main.js"></script>
+    <script src="./modules/chat.js"></script>
 </body>
 </html>
