adição em 'chat' para a funcionalidade de ia, com que a principio a ideia provisória é uma ia testadora de prompt e sujere alterações e prompts melhores... e até o resultado do prompt... e ajustes visuais

--- a/public/chat.html
+++ b/public/chat.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>nanoSet</title>
     <link rel="stylesheet" href="./style/chat.css">
+
+    <!--icone do navegador-->
+    <link rel="shortcut icon" href="./assets/nsLogoNavegador.png" type="image/x-icon">
 </head>
 <body>
     <header>
@@ -29,7 +32,7 @@
 
     <main>
         <section class="intro">
-            <h1>Seja bem-vindo ao <p class="backGroundPersonalizado">nanoSet</p></h1>
+            <!--<h1>Seja bem-vindo ao <p class="backGroundPersonalizado">nanoSet</p></h1>-->
             <p>Teste seus prompts com IA treinada para isso!</p>
         </section>
         
@@ -38,8 +41,8 @@
                 <!-- As mensagens enviadas serão exibidas aqui -->
             </div>
             <div class="input-container">
-                <textarea id="chat-input" placeholder="Digite sua mensagem..."></textarea>
-                <button id="send-button">Enviar</button>
+                <textarea id="chat-input" placeholder="Digite um prompt inicial ou a ideia do seu promp..."></textarea>
+                <button id="send-button"><img src="./assets/message.png" alt="send image" class="img-send"></button>
             </div>
         </section>
 
