ajuste da barra de rolagem lateral, css

--- a/public/chat.html
+++ b/public/chat.html
@@ -48,7 +48,7 @@
 
 
     <footer>
-        <p>&copy; 2025 - mehX.Tech | AndrezeraDev</p>
+        <p>&copy; 2025 - nanoSet | AndrezeraDev</p>
         <div class="social-medias">
             <p>Acompanhe a gente também no instagram!</p>
             <div class="images">
