--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
             </ul>
             <div class="account-container">
                 <a href="login.html">Login|</a>
-                <a href="cadastro.html">Cadastro</a>
+                <a href="singup.html">Cadastro</a>
             </div>
         </nav>
     </header>
